--- a/contact-us/index.jade
+++ b/contact-us/index.jade
@@ -9,7 +9,7 @@ html(lang="en")
 			#contact-heading
 				.section-top
 					h1.title.dark Contact Us
-					h2.sub-title Lets discuss how we can leverage leverage your IT resources.
+					h2.sub-title Lets discuss how we can leverage leverage your IT resources.<br/>We will contact you within 24 hours after receiving your message.
 
 			#contact-body
 				.contact-form
