--- a/portfolio/social-travel/index.jade
+++ b/portfolio/social-travel/index.jade
@@ -37,9 +37,9 @@ html(lang="en")
 				.section-top
 					h1.title.dark What technologies did we use?
 					.tags
-						.tag Angular
+						.tag Angular JS
 						.tag Bower
-						.tag Sylus
+						.tag Stylus
 						.tag Jade
 						.tag Google maps API
 						.tag Java 8
