--- a/portfolio/travel/index.jade
+++ b/portfolio/travel/index.jade
@@ -37,12 +37,12 @@ html(lang="en")
 				.section-top
 					h1.title.dark What technologies did we use?
 					.tags
-						.tag AngularJS
+						.tag Angular JS
 						.tag Jade
 						.tag Stylus
 						.tag GulpJS, lodash
 						.tag Yeoman
-						.tag Google Maps
+						.tag Google Maps API
 						.tag Geolocation
 						.tag AWS (EC2)
 						.tag Jenkins
