--- a/portfolio/yow/index.jade
+++ b/portfolio/yow/index.jade
@@ -21,6 +21,7 @@ html(lang="en")
 							span.icon
 								include ../../icons/arrow-go
 				.section-top
+					h2.type Travel
 					h1.title.dark YOW
 					h2.sub-title You travel a lot, but you don’t keep track of the places you visited? Your friend asks you about countries you’ve seen and you scratch your head thinking? Better scratch the map. Try our epic application YOW.
 					h2.sub-title As we travel extensively throughout the year for fellow travel-lovers we have crafted an application.
