--- a/services/index.jade
+++ b/services/index.jade
@@ -9,7 +9,7 @@ html(lang="en")
 			.container
 				.section-top
 					h1.title.dark Services
-					h2.sub-title Based on scope and duration of a project the following comparison table of 3 services is provided.
+					h2.sub-title Based on scope and duration of a project, on-site or off-premise delivery team location we provide 3 services. <br/>The combination of services is available.
 
 		section#service-table
 			.services-titles
@@ -31,7 +31,7 @@ html(lang="en")
 				.title-option
 					.option-name Instant Feedback
 				.title-option
-					.option-name Cardidates Interview
+					.option-name Candidates Interview
 				.title-option
 					.option-name Continuous Client Engagement
 				.title-option
@@ -78,7 +78,7 @@ html(lang="en")
 							.option-name Instant Feedback
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
-							.option-name Cardidates Interview
+							.option-name Candidates Interview
 							.option-checkbox.checked
 						.slide-option(data-tappable="true")
 							.option-name Continuous Client Engagement
