--- a/services/relocation/index.jade
+++ b/services/relocation/index.jade
@@ -30,11 +30,11 @@ html(lang="en")
 
 				h2.sub-title.result You do 5%, we do the remaining 95% for you.
 
-				//- a(href="/services")
-				//- 	button(role="button")
-				//- 		span Services comparison
-				//- 		span.icon
-				//- 			include ../../icons/arrow-go
+				a(href="/services")
+					button(role="button")
+						span Services comparison
+						span.icon
+							include ../../icons/arrow-go
 
 		section#workflow.mobile
 			.container
