--- a/parts/footer.jade
+++ b/parts/footer.jade
@@ -4,7 +4,7 @@ footer
 			include menu
 			.copyright.desktop
 				p
-					| &copy; 2017 UNeed Web All Right Reserved
+					| &copy; 2017 UNeed Web All Rights Reserved
 		.subscribe
 			h1 Get in touch with us
 			.subscribe-form
@@ -23,14 +23,6 @@ footer
 			p
 				| &copy; 2017 UNeed Web All Right Reserved
 
-	script(type="text/javascript").
-		(function() {
-			var navbarButton = document.getElementById('toggle-navbar');
-			var body = document.getElementsByTagName('body')[0];
-			navbarButton.addEventListener('click', function() {
-				body.classList.toggle('navbar-expanded');
-			});
-		})(window);
 	//- <!-- Google Analytics -->
 	script(type="text/javascript").
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
