--- a/styl/services.styl
+++ b/styl/services.styl
@@ -199,7 +199,7 @@
 				height: 90%
 				width: 22rem
 				background-repeat: no-repeat
-				background-size: 730px
+				background-size: cover
 				&.outsource
 					background-image: url('/images/png/outsource.png')
 				&.outstaff
