--- a/styl/index.styl
+++ b/styl/index.styl
@@ -32,7 +32,7 @@ body.content-loaded
 			width: 100%
 			height: 100%
 			z-index: -1
-			transform: scale(1.2)
+			transform: scale(1.2) translate3d(0,0,0)
 			background-image url('/photos/landing.jpg')
 			background-position: 50%
 			background-repeat: no-repeat
