--- a/services/outsource/index.jade
+++ b/services/outsource/index.jade
@@ -53,7 +53,7 @@ html(lang="en")
 					li.color-6 Test and launch of a project
 					li.color-7 In case needed, continuous project support
 
-		section#workflow.desktop
+		section#workflow.desktop.animated
 			.container
 				.workflow-header
 					h1.title We do
@@ -94,7 +94,7 @@ html(lang="en")
 						.arrow
 						.text In case needed, continuous project support
 
-		section#result
+		section#result.animated
 			h1.title.dark Result
 			h2.sub-title You get well-qualified team member, clean and robust code and successfully implemented product
 
@@ -105,4 +105,6 @@ html(lang="en")
 						include ../../icons/arrow-go
 
 		include ../../parts/footer
+		script(type="text/javascript" src="/js/libs.min.js")
+		script(type="text/javascript" src="/js/services.min.js")
 
