--- a/services/outstaff/index.jade
+++ b/services/outstaff/index.jade
@@ -57,7 +57,7 @@ html(lang="en")
 					li.color-7 Provide workspace, facilities and technical equipment
 					li.color-8 Take care of daily administrative things
 
-		section#workflow.desktop
+		section#workflow.desktop.animated
 			.container
 				.workflow-header
 					h1.title We do
@@ -113,7 +113,7 @@ html(lang="en")
 						.arrow
 						.text Renew the contract
 
-		section#result
+		section#result.animated
 			h1.title.dark Result
 			h2.sub-title You get well-qualified team member, clean and robust code and successfully implemented product
 
@@ -124,4 +124,6 @@ html(lang="en")
 						include ../../icons/arrow-go
 
 		include ../../parts/footer
+		script(type="text/javascript" src="/js/libs.min.js")
+		script(type="text/javascript" src="/js/services.min.js")
 
