--- a/services/relocation/index.jade
+++ b/services/relocation/index.jade
@@ -51,7 +51,7 @@ html(lang="en")
 					li.color-7 Suggest candidates and schedule an interview with your team
 					li.color-8 Handle relocation and settlement
 
-		section#workflow.desktop
+		section#workflow.desktop.animated
 			.container
 				.workflow-header
 					h1.title We do
@@ -97,7 +97,7 @@ html(lang="en")
 						.arrow
 						.text Sign contract with candidates
 
-		section#result
+		section#result.animated
 			h1.title.dark Result
 			h2.sub-title You get a new, high-skilled team member that completes your business team.
 
@@ -108,4 +108,6 @@ html(lang="en")
 						include ../../icons/arrow-go
 
 		include ../../parts/footer
+		script(type="text/javascript" src="/js/libs.min.js")
+		script(type="text/javascript" src="/js/services.min.js")
 
