--- a/styl/contact-us.styl
+++ b/styl/contact-us.styl
@@ -68,6 +68,7 @@
 					width: 15rem
 			.contacts, .details
 				width: 13rem
+				margin: auto
 		@media screen and (min-width: $screenMedium)
 			display: flex
 			width: 60rem
