--- a/styl/portfolio.styl
+++ b/styl/portfolio.styl
@@ -33,16 +33,20 @@
 				background-image: url('/photos/localisation/localisation-portfolio-grid.png')
 			&.social-travel
 				background-image: url('/photos/social-travel/social-travel-portfolio-grid.png')
-			.overlay, .project-content
+			.overlay
 				width: 100%
 				height: 100%
 				position: absolute
-				top: 0
+				bottom: 0
 				left: 0
 			.project-content
 				display: flex
 				flex-direction: column
 				justify-content: space-between
+				width: 100%
+				height: 100%
+				position: relative
+				z-index: 1
 			.project-footer
 				display: flex
 				flex-direction: column
@@ -101,13 +105,17 @@
 			.project
 				width: 50%
 				border-right: 1px solid white
-				.overlay, .description, .details-link
+				.overlay
+					height: 0
+					transition: height .3s linear
+				.description, .details-link
 					visibility: hidden
 					opacity: 0
 				&:hover, &:focus, &:active
 					.overlay
-						opacity: .5
-						visibility: visible
+						height: 100%
+					.project-content
+						animation: appearToTop .5s linear forwards
 					.description, .details-link
 						opacity: 1
 						visibility: visible
