--- a/styl/variables.styl
+++ b/styl/variables.styl
@@ -40,6 +40,14 @@ $screenXLarge = 1400px
 		transform: scale(0)
 		display: none
 
+@keyframes appearToTop
+	0%
+		transform: translateY(17px)
+		opacity: 0
+	100%
+		opacity: 1
+		transform: translateY(0)
+
 @keyframes jumping
 	0%
 		transform: translateY(0)
