--- a/parts/footer.jade
+++ b/parts/footer.jade
@@ -23,6 +23,13 @@ footer
 			p
 				| &copy; 2017 UNeed Web All Right Reserved
 
+	script(type="text/javascript").
+		var navbarButton = document.getElementById('toggle-navbar');
+		var body = document.getElementsByTagName('body')[0];
+		navbarButton.addEventListener('click', function() {
+			body.classList.toggle('navbar-expanded');
+		});
+
 	//- <!-- Google Analytics -->
 	script(type="text/javascript").
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
