--- a/parts/head.jade
+++ b/parts/head.jade
@@ -17,6 +17,16 @@ head
 	link(rel="manifest" href="/manifest.json")
 	link(rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5")
 	style(type='text/css').
+		@-webkit-keyframes dissapear {
+			0% {
+				opacity: 1;
+				visibility: visible;
+			}
+			100% {
+				opacity: 0;
+				visibility: hidden;
+			}
+		}
 		@keyframes dissapear {
 			0% {
 				opacity: 1;
@@ -28,8 +38,10 @@ head
 			}
 		}
 		body.content-loaded #loader {
-			animation: dissapear .75s ease forwards;
-			transform: translate3d(0,0,0);
+			-webkit-animation: dissapear .75s ease forwards;
+			        animation: dissapear .75s ease forwards;
+			-webkit-transform: translate3d(0,0,0);
+			        transform: translate3d(0,0,0);
 		}
 		#loader {
 			background-color: #0e1a35;
@@ -39,9 +51,15 @@ head
 			top: 0;
 			left: 0;
 			z-index: 10000000;
+			display: -webkit-box;
+			display: -ms-flexbox;
 			display: flex;
-			justify-content: center;
-			align-items: center;
+			-webkit-box-pack: center;
+			    -ms-flex-pack: center;
+			        justify-content: center;
+			-webkit-box-align: center;
+			    -ms-flex-align: center;
+			        align-items: center;
 		}
 
 		#loader .gif {
