--- a/contact-us/index.jade
+++ b/contact-us/index.jade
@@ -1,6 +1,7 @@
 doctype html
 html(lang="en")
 	include ../parts/head
+	+head("Outstanding software engineering practices | UNeed Web", "where to outsource software development, how to find offshore software development company, why outsource web development, how to find web design company", "At UNeed Web we deliver top-quality web developement services (web sites, web apps, offshore IT outsourcing). Our experienced team of developers, designers and project managers implement customised web projects.")
 	body#contact-us-page
 		include ../parts/header
 		include ../parts/mobile-nav
