--- a/index.jade
+++ b/index.jade
@@ -1,6 +1,7 @@
 doctype html
 html(lang="en")
 	include parts/head
+	+head("Offshore software development - Web Development and Design Outsourcing| UNeed Web", "offshore software development, web development outsourcing, web design outsourcing", "At UNeed Web we deliver top-quality web developement services (web sites, web apps, offshore IT outsourcing). Our experienced team of developers, designers and project managers implement customised web projects.")
 	body#about-page
 		include parts/loader
 		include parts/header
