--- a/portfolio/index.jade
+++ b/portfolio/index.jade
@@ -1,6 +1,7 @@
 doctype html
 html(lang="en")
 	include ../parts/head
+	+head("Portfolio | UNeed Web", "Web development projects, mobile development projects, product design", "Find out our track record of high quality tech solutions for web and mobile development, web design and more.")
 	body#portfolio-page
 		include ../parts/loader
 		include ../parts/header
