--- a/portfolio/travel/index.jade
+++ b/portfolio/travel/index.jade
@@ -1,6 +1,7 @@
 doctype html
 html(lang="en")
 	include ../../parts/head
+	+head("Portfolio - Travel | UNeed Web", "Travel application, Web Development, NLP technology", "Development of a web application for a travel company with a complete customer planning journey features.")
 	body#portfolio-project-page
 		include ../../parts/header
 		include ../../parts/mobile-nav
