--- a/services/outsource/index.jade
+++ b/services/outsource/index.jade
@@ -1,6 +1,7 @@
 doctype html
 html(lang="en")
 	include ../../parts/head
+	+head("Project Development | UNeed Web", "Front-end development, Back-end development, PHP, SQL, JavaScript, HTML, Responsive Design, CSS, React, Angular, Wordpress", "Our team of experienced software professionals will guarantee that your product is successfully developed. By offloading your project to us, you will optimize work, save the best in-house staff for more valuable tasks.")
 	body#service-page
 		include ../../parts/header
 		include ../../parts/mobile-nav
