--- a/services/outstaff/index.jade
+++ b/services/outstaff/index.jade
@@ -1,6 +1,7 @@
 doctype html
 html(lang="en")
 	include ../../parts/head
+	+head("Dedicated Development Team | UNeed Web", "Team Extension, Dedicated Team, Outstaffing, Benefits of offshore software development", "Dedicated Development Team is a cost-effective outstaffing model for companies that work on software product development and require high-quality, efficient resources within an optimized time frame.")
 	body#service-page
 		include ../../parts/header
 		include ../../parts/mobile-nav
