--- a/parts/head.jade
+++ b/parts/head.jade
@@ -1,69 +1,70 @@
-head
-	meta(charset="utf-8")
-	meta(http-equiv="X-UA-Compatible" content="IE=edge")
-	meta(name="viewport" content="width=device-width, initial-scale=1")
-	meta(name="description" content="Uneed Web - Software Development Company")
-	meta(name="keywords" content="software, development, company, outsource, outstaff")
-	meta(name="author" content="Kirill Buga")
-	meta(name="apple-mobile-web-app-title" content="uneedweb")
-	meta(name="application-name" content="uneedweb")
-	meta(name="theme-color" content="#ffffff")
-	title Uneed Web - Software Development Company
-	link(href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet")
-	link(href="/css/index.css" rel="stylesheet")
-	link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
-	link(rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png")
-	link(rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png")
-	link(rel="manifest" href="/manifest.json")
-	link(rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5")
-	style(type='text/css').
-		@-webkit-keyframes dissapear {
-			0% {
-				opacity: 1;
-				visibility: visible;
+mixin head(title, keywords, description)
+	head
+		meta(charset="utf-8")
+		meta(http-equiv="X-UA-Compatible" content="IE=edge")
+		meta(name="viewport" content="width=device-width, initial-scale=1")
+		meta(name="description" content="#{description}")
+		meta(name="keywords" content="#{keywords}")
+		meta(name="author" content="Kirill Buga")
+		meta(name="apple-mobile-web-app-title" content="uneedweb")
+		meta(name="application-name" content="uneedweb")
+		meta(name="theme-color" content="#ffffff")
+		title #{title}
+		link(href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet")
+		link(href="/css/index.css" rel="stylesheet")
+		link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
+		link(rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png")
+		link(rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png")
+		link(rel="manifest" href="/manifest.json")
+		link(rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5")
+		style(type='text/css').
+			@-webkit-keyframes dissapear {
+				0% {
+					opacity: 1;
+					visibility: visible;
+				}
+				100% {
+					opacity: 0;
+					visibility: hidden;
+				}
 			}
-			100% {
-				opacity: 0;
-				visibility: hidden;
+			@keyframes dissapear {
+				0% {
+					opacity: 1;
+					visibility: visible;
+				}
+				100% {
+					opacity: 0;
+					visibility: hidden;
+				}
 			}
-		}
-		@keyframes dissapear {
-			0% {
-				opacity: 1;
-				visibility: visible;
+			body.content-loaded #loader {
+				-webkit-animation: dissapear .75s ease forwards;
+				        animation: dissapear .75s ease forwards;
+				-webkit-transform: translate3d(0,0,0);
+				        transform: translate3d(0,0,0);
 			}
-			100% {
-				opacity: 0;
-				visibility: hidden;
+			#loader {
+				background-color: #0e1a35;
+				position: fixed;
+				width: 100%;
+				height: 100%;
+				top: 0;
+				left: 0;
+				z-index: 10000000;
+				display: -webkit-box;
+				display: -ms-flexbox;
+				display: flex;
+				-webkit-box-pack: center;
+				    -ms-flex-pack: center;
+				        justify-content: center;
+				-webkit-box-align: center;
+				    -ms-flex-align: center;
+				        align-items: center;
 			}
-		}
-		body.content-loaded #loader {
-			-webkit-animation: dissapear .75s ease forwards;
-			        animation: dissapear .75s ease forwards;
-			-webkit-transform: translate3d(0,0,0);
-			        transform: translate3d(0,0,0);
-		}
-		#loader {
-			background-color: #0e1a35;
-			position: fixed;
-			width: 100%;
-			height: 100%;
-			top: 0;
-			left: 0;
-			z-index: 10000000;
-			display: -webkit-box;
-			display: -ms-flexbox;
-			display: flex;
-			-webkit-box-pack: center;
-			    -ms-flex-pack: center;
-			        justify-content: center;
-			-webkit-box-align: center;
-			    -ms-flex-align: center;
-			        align-items: center;
-		}
 
-		#loader .gif {
-			background-repeat: none;
-			width: 351px;
-			height: 300px;
-		}
+			#loader .gif {
+				background-repeat: none;
+				width: 351px;
+				height: 300px;
+			}
