--- a/portfolio/yow/index.jade
+++ b/portfolio/yow/index.jade
@@ -1,6 +1,7 @@
 doctype html
 html(lang="en")
 	include ../../parts/head
+	+head("Portfolio - YOW | Uneedweb", "Travel application, Mobile Development, online scratch map", "Our own mobile application that keeps track of the places you visit and shows your exploration progress.")
 	body#portfolio-project-page
 		include ../../parts/header
 		include ../../parts/mobile-nav
