--- a/services/index.jade
+++ b/services/index.jade
@@ -1,6 +1,7 @@
 doctype html
 html(lang="en")
 	include ../parts/head
+	+head("Project Web Development - Dedicated Development Team - Outstaffing | UNeed Web", "web software development, web design development, dedicated development team, project web development, team extension, agile software engingeering", "We believe that software development is a highly engaging social process where the key element is communication. At #Studio we nurture personal approach to your cause and ideas, bringing core value to the end-product.")
 	body#services-page
 		include ../parts/header
 		include ../parts/mobile-nav
