--- a/portfolio/gambling/index.jade
+++ b/portfolio/gambling/index.jade
@@ -1,6 +1,7 @@
 doctype html
 html(lang="en")
 	include ../../parts/head
+	+head("Portfolio - Gambling | Uneedweb", "Web Development, blackjack, roulette, baccarat, WebSocket", "Revamping of existing gambling web applications for a betting company with interactive components.")
 	body#portfolio-project-page
 		include ../../parts/header
 		include ../../parts/mobile-nav
