--- a/portfolio/index.jade
+++ b/portfolio/index.jade
@@ -30,6 +30,7 @@ html(lang="en")
 		section#projects.all-filter
 			.container
 				.project.travel.web
+					.project-background
 					.overlay
 					.project-content
 						.project-header
@@ -43,6 +44,7 @@ html(lang="en")
 									span.icon
 										include ../icons/arrow-go
 				.project.sport.web
+					.project-background
 					.overlay
 					.project-content
 						.project-header
@@ -56,6 +58,7 @@ html(lang="en")
 									span.icon
 										include ../icons/arrow-go
 				.project.yow.mobile.design
+					.project-background
 					.overlay
 					.project-content
 						.project-header
@@ -69,6 +72,7 @@ html(lang="en")
 									span.icon
 										include ../icons/arrow-go
 				.project.banking.web
+					.project-background
 					.overlay
 					.project-content
 						.project-header
@@ -81,7 +85,8 @@ html(lang="en")
 									span Details
 									span.icon
 										include ../icons/arrow-go
-				.project.gammling.web
+				.project.gambling.web
+					.project-background
 					.overlay
 					.project-content
 						.project-header
@@ -95,6 +100,7 @@ html(lang="en")
 									span.icon
 										include ../icons/arrow-go
 				.project.social-travel.web
+					.project-background
 					.overlay
 					.project-content
 						.project-header
@@ -108,6 +114,7 @@ html(lang="en")
 									span.icon
 										include ../icons/arrow-go
 				.project.localisation.web.design
+					.project-background
 					.overlay
 					.project-content
 						.project-header
