--- a/contact-us/failure/index.jade
+++ b/contact-us/failure/index.jade
@@ -1,6 +1,7 @@
 doctype html
 html(lang="en")
 	include ../../parts/head
+	+head("Outstanding software engineering practices | UNeed Web", "", "Thanks for contacting us.")
 	body#contact-us-result-page
 		include ../../parts/header
 		include ../../parts/mobile-nav
