--- a/styl/portfolio.styl
+++ b/styl/portfolio.styl
@@ -14,26 +14,37 @@
 			position: relative
 			width: 100%
 			height: 400px
-			background-size: cover
 			border-bottom: 1px solid white
 			transform scale(0)
 			transition: transform .3s ease
-			background-image: url('/photos/travel/travel-portfolio-grid.png')
-			&.travel
+			overflow: hidden
+			.project-background
+				transform: scale(1)
+				transition: transform .5s linear
+				background-size: cover
 				background-image: url('/photos/travel/travel-portfolio-grid.png')
+			&.travel
+				.project-background
+					background-image: url('/photos/travel/travel-portfolio-grid.png')
 			&.sport
-				background-image: url('/photos/sport/sport-portfolio-grid.png')
+				.project-background
+					background-image: url('/photos/sport/sport-portfolio-grid.png')
 			&.yow
-				background-image: url('/photos/yow/yow-portfolio-grid.png')
+				.project-background
+					background-image: url('/photos/yow/yow-portfolio-grid.png')
 			&.banking
-				background-image: url('/photos/banking/banking-portfolio-grid.png')
+				.project-background
+					background-image: url('/photos/banking/banking-portfolio-grid.png')
 			&.gambling
-				background-image: url('/photos/gambling/gambling-portfolio-grid.png')
+				.project-background
+					background-image: url('/photos/gambling/gambling-portfolio-grid.png')
 			&.localisation
-				background-image: url('/photos/localisation/localisation-portfolio-grid.png')
+				.project-background
+					background-image: url('/photos/localisation/localisation-portfolio-grid.png')
 			&.social-travel
-				background-image: url('/photos/social-travel/social-travel-portfolio-grid.png')
-			.overlay
+				.project-background
+					background-image: url('/photos/social-travel/social-travel-portfolio-grid.png')
+			.overlay, .project-background
 				width: 100%
 				height: 100%
 				position: absolute
@@ -106,14 +117,16 @@
 				width: 50%
 				border-right: 1px solid white
 				.overlay
-					height: 0
-					transition: height .3s linear
+					opacity: 0
+					transition: opacity .5s linear
 				.description, .details-link
 					visibility: hidden
 					opacity: 0
 				&:hover, &:focus, &:active
+					.project-background
+						transform: scale(1.2)
 					.overlay
-						height: 100%
+						opacity: .5
 					.project-content
 						animation: appearToTop .5s linear forwards
 					.description, .details-link
@@ -121,7 +134,7 @@
 						visibility: visible
 		@media screen and (min-width: $screenMedium)
 			.project
-				width: 33.33%
+				width: 33.3%
 				
 	#result
 		background-color: #f3f8ff
